edited href link and change font colors for href

--- a/finalproject/index2.html
+++ b/finalproject/index2.html
@@ -11,18 +11,18 @@
 <h3>Chino salangsang</h3>
 
 <div class='flexbox-container'>
-    <div class='flexbox-item flexbox-item-1'>Module 1 Quiz1</div>
-    <div class='flexbox-item flexbox-item-1'>Module 1 Quiz2</div>
-    <div class='flexbox-item flexbox-item-1'>Module 1 Exam</div>
-    <div class='flexbox-item flexbox-item-1'>Module 2 Quiz1</div>
-    <div class='flexbox-item flexbox-item-1'>Module 2 Quiz2</div>
-    <div class='flexbox-item flexbox-item-1'>Module 2 Exam</div>
-    <div class='flexbox-item flexbox-item-1'>Module 3 Quiz1</div>
-    <div class='flexbox-item flexbox-item-1'>Module 3 Quiz2</div>
-    <div class='flexbox-item flexbox-item-1'>Module 3 Exam</div>
+    <a href="index.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz1</div></a>
+    <a href="index.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz2</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 1 Exam</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Quiz1</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Quiz2</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Exam</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 3 Quiz1</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 3 Quiz2</div></a>
+    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 3 Exam</div></a>
    
 </div>
 
-<a href="index3.html"> Noel Magan</a> 
+<h2> <a href="index3.html">Noel Magan</a></h2>
 </body>
 </html>
