--- a/finalproject/index2.html
+++ b/finalproject/index2.html
@@ -11,10 +11,10 @@
 <h3>Chino salangsang</h3>
 
 <div class='flexbox-container'>
-    <a href="index.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz1</div></a>
-    <a href="index.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz2</div></a>
-    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 1 Exam</div></a>
-    <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Quiz1</div></a>
+    <a href="chinoquiz2m1/main.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz1</div></a>
+    <a href="chinoquiz2m1/main.html"> <div class='flexbox-item flexbox-item-1'>Module 1 Quiz2</div></a>
+    <a href="chinoexamm1/main.html"><div class='flexbox-item flexbox-item-1'>Module 1 Exam</div></a>
+    <a href="CHINOQUIZ1M2/main/main.html"><div class='flexbox-item flexbox-item-1'>Module 2 Quiz1</div></a>
     <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Quiz2</div></a>
     <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 2 Exam</div></a>
     <a href="index.html"><div class='flexbox-item flexbox-item-1'>Module 3 Quiz1</div></a>
